<resources>
    <string name="app_name">Assiduity</string>

    <!-- Landing page !-->
    <string name="title_landing_page">Posez-vous la bonne question</string>
    <string name="first_exemple_question">Avez-vous embrassé votre copine hier ?</string>
    <string name="second_exemple_question">Avez-vous sorti votre animal de compagnie hier ?</string>
    <string name="third_exemple_question">Avez-vous passé une bonne journée aujourd\'hui ?</string>
    <string name="other_exemple_question">Une autre question à suggérer ?</string>
    <string name="next_step">Continuer</string>

    <!-- Recurrence page !-->
    <string name="congrat_image_description">Félicitations</string>
</resources>
